dark mode fixes

--- a/css/youtube.css
+++ b/css/youtube.css
@@ -47,7 +47,6 @@ h5{
 }
 
 .sections .active{
-    color: Black;
     border-bottom: 3px solid #FFBA01;
 }
 
